= 3.4.0 (not released yet)
- Support rails4
- Quote selected columns
- More unobtrusive html views

= 3.3.3
- Allow to override select options in active_scaffold_search_select
- Load effects from jQuery UI when using jquery-rails 3 gem
- Fix searching on nested scaffolds (broken on 3.3.2)
- Fix searching when includes is set to nil
- Send parent_controller for render_field requests on subforms for persisted records, as new records were already sending it
- Avoid loading some JS when jquery-ui is not available
- Load CSS from jquery ui rails gem

= 3.3.2
- Fix subforms inside subforms
- Fix draggable for jquery-rails 3 gem
- Support to change attributes in list column headings with column_heading_attributes helper
- Keep url for embedded in data-refresh attr of active-scaffold-component div
- Remove duplicated results when searching with outer_joins in plural associations

= 3.3.1
- Set adapter colspan (nested lists and forms) using javascript, fixed issue when active_scaffold_config_list is used
- Fix bug saving default values when get method is overrided on model to return default value
- Fix close action_link without adapter
- Fix update calculations after destroy a row
- Fix count and calculate searching with count_includes
- Fix action_after_create
- Cache associations options (for :select form_ui on associations), it can be disabled with config.cache_association_options = false
- Clean some code so we can stop changing @record in partials and using @record in helpers
- Support jquery-rails 3 gem and jquery-ui-rails gem
- Clean some invalid HTML
- Add store_user_settings option to enable storing sort, page and search params into session (enabled by default for backwards compatibility)
- Fix each_record_in_scope when conditions_for_collection needs some includes
- Add method to override label in search fields (field_search)
- Add method to override attributes for column headings on list
- Support security_method and ignore_method in column's link